--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,7 @@
-<footer class="footer">
-  <div class="">
-    <ul class="">
-      <li><%= link_to "サービス概要", "#" %></li>
-      <li><%= link_to "お問い合わせ", "#" %></li>
-      <li><%= link_to "利用規約", "#" %></li>
-    </ul>
-  </div>
+<footer>
+  <ul>
+    <li><%= link_to "サービス概要", "#" %></li>
+    <li><%= link_to "お問い合わせ", "#" %></li>
+    <li><%= link_to "利用規約", "#" %></li>
+  </ul>
 </footer>
