--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -72,7 +72,7 @@
     <div class="comment">
     <div class="user-image">
       <% if comment.user.user_image? %>
-        <%= image_tag comment.user_image.url %>
+        <%= image_tag comment.user.user_image.url %>
       <% else %>
         <%= image_tag "/assets/default_user.png" %>
       <% end %>
@@ -100,13 +100,13 @@
           <div class="comment">
           <div class="user-image">
             <% if reply.user.user_image? %>
-              <%= image_tag reply.user_image.url %>
+              <%= image_tag reply.user.user_image.url %>
             <% else %>
               <%= image_tag "/assets/default_user.png" %>
             <% end %>
           </div>
           <div class="comment-box">
-            <%= link_to reply.user.name, user_path(comment.user), class:"comment-name" %>
+            <%= link_to reply.user.name, user_path(reply.user), class:"comment-name" %>
             <p class="comment-time">
               <%= time_ago_in_words(reply.created_at) %>前
             </p>
