--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -15,6 +15,9 @@
     <%= f.label :パスワード確認用, class:"col-sm-2 control-label" %>
     <%= f.text_field :password_confirmation, class: "form-control" %>
     
+    <%= f.label :プロフィール画像, class:"col-sm-2 control-label" %>
+    <%= f.file_field :user_image, class: "form-control" %>
+
     <%= f.submit "保存", class:"btn btn-primary btn-block" %>
   <% end %>
   
