--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,9 +18,6 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
 
-
- $gray-medium-light: #eaeaea;
-
  //ページ全体
  *{
   margin: 0;
@@ -82,7 +79,7 @@ h4{
 }
 
 
-//header
+//ヘッダー
 header{
   .logo{
     color: #000;
@@ -115,7 +112,7 @@ header{
 }
 
 
-//footer
+//フッター
 footer{
   background-color: #5472cd;
   height: 50px;
@@ -136,6 +133,8 @@ footer{
 
 
 //homeページ
+
+
 
 
 //ユーザー詳細ページ
@@ -175,41 +174,70 @@ footer{
   display: flex;
   align-items: center;
   margin-right: 10px;
-  width: 300px;
+  width: 280px;
   img{
-    width: 300px;
+    width: 280px;
     border: solid 1px #5472cd;
   }
 }
 
 .post-caption{
-  width: 290px;
+  width: 310px;
+  
+  .post-title {
+    border-bottom: solid 3px #cce4ff;
+    position: relative;
+  }
+  
+  .post-title:after {
+    position: absolute;
+    content: " ";
+    display: block;
+    border-bottom: solid 3px #5472cd;
+    bottom: -3px;
+    width: 20%;
+  }
+
+  .post-box{
+    display: flex;
+    .post-box2{
+      display: flex;
+      margin-right: 20px;
+      margin-bottom: 10px;
+      .post-image{
+        width: 30px;
+        height: 30px;
+        margin-right: 5px;
+        margin-bottom: 0px;
+        img{
+          width: 30px;
+          height: 30px;
+          border-radius: 50%;
+        }
+      }
+      .post-name{
+        margin-top: 5px;
+        margin-bottom: 0px;
+      }
+    }
+    .post-time{
+      margin-top: 5px;
+      margin-bottom: 0px;
+      font-size: 15px;
+      color: gray;
+    }
+  }
+
 }
 
-.post-title {
-  border-bottom: solid 3px #cce4ff;
-  position: relative;
-}
  
-.post-title:after {
-  position: absolute;
-  content: " ";
-  display: block;
-  border-bottom: solid 3px #5472cd;
-  bottom: -3px;
-  width: 20%;
-}
 
   .post-content{
     border-bottom: solid 1px #5472cd;
     width: 85px;
   }
 
-  .post-time{
-    font-size: 15px;
-    color: gray;
-    text-align: right;
-  }
+
   
 
   //投稿詳細
