--- a/app/views/shared/_posts.html.erb
+++ b/app/views/shared/_posts.html.erb
@@ -1,5 +1,5 @@
 <ul class="flex flame">
-  <% @posts.each do |post| %>
+  <% @posts.order(:created_at).each do |post| %>
     <li class="post-list flame">
       <div class="post-image">
         <% if post.image? %>
@@ -12,15 +12,26 @@
         <h3 class="post-title">
           <%= link_to post.name, post_path(post) %>
         </h3>
-        <p class="post-time">
-          <%= time_ago_in_words(post.created_at) %>前に投稿
-        </p>
-        <p>作成ユーザー：
-          <%= link_to post.user.name, user_path(post.user) %>
-        </p>
-        <p>タグ：
+        <div class="post-box">
+          <div class="post-box2">
+            <p class="post-image">
+              <% if post.user.user_image? %>
+                <%= image_tag post.user.user_image.url %>
+              <% else %>
+                <%= image_tag "/assets/default_user.png" %>
+              <% end %>
+            </p>
+            <p class="post-name">
+              <%= link_to post.user.name, user_path(post.user) %>
+            </p>
+          </div>
+            <p class="post-time">
+              <%= time_ago_in_words(post.created_at) %>前に投稿
+            </p>
+        </div>
+        <p class="post-tag">
           <% post.tags.each do |list| %>
-            <%= link_to list.tag_name, tag_path(list), class:"tag" %>
+            <%= link_to list.tag_name, tag_path(list), class:"label label-primary" %>
           <% end %>
         </p>
         <p class="post-content">サービス概要</p>
