--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,7 +27,7 @@
 }
 
 main{
-  padding: 70px 0px;
+  padding-top: 70px;
   width: 90%;
   margin: 0px auto;
   min-height: 100vh;
@@ -133,8 +133,34 @@ footer{
 
 
 //homeページ
+.home-container{
+  height: 500px;
+  display: flex;
+    padding-top: 200px;
+    flex-direction: column;
+    align-items: center;
+  .home-title1{
+    font-size: 50px;
+    font-weight: 700;
+  }
+  .home-title2{
+    font-size: 50px;
+    font-weight: 700;
+  }
+  .btn{
+    margin-top: 40px;
+    width: 200px;
+    font-size: 20px;
+    background-color: #5472cd;
+  }
+}
 
 
+
+//ユーザー登録ページ
+.already{
+  margin-top: 10px;
+}
 
 
 //ユーザー詳細ページ
@@ -230,15 +256,10 @@ footer{
 
 }
 
- 
-
   .post-content{
     border-bottom: solid 1px #5472cd;
     width: 85px;
   }
-
-
-  
 
   //投稿詳細
   .show-center {
@@ -338,6 +359,20 @@ footer{
   }
 }
 
+//ページネーション
+.pagination>li>a {          
+  border: none;     
+  color: #5472cd;   
+}
+
+.pagination>.active>a {     
+  background: #5472cd;
+  border-radius: 15px;
+}
+
+.pagination>li>a:hover {        
+  border-radius: 15px; 
+}
 
 
 
