--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,7 @@
             </li>
           <% else %>
             <li><%= link_to "ログイン", new_session_path %></li>
-            <li><%= link_to "新規作成", new_user_path %></li>
+            <li><%= link_to "新規登録", new_user_path %></li>
           <% end %>
         </ul>
       </nav>
