--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>新規登録画面</h1>
+<h1>新規登録</h1>
 <h4>アカウントをお持ちでない方がユーザーの新規登録を行います。</h4>
 <div class="sub flame">
 <%= form_with(model: @user, local: true, class:"form-horizontal") do |f| %>
@@ -41,3 +41,4 @@
 
   <%= f.submit "登録", class:"btn btn-primary btn-block" %>
 <% end %>
+<div class="already">既にアカウントをお持ちの方は<%= link_to "こちら", new_session_path %></div>
