--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer>
   <ul>
-    <li><%= link_to "サービス概要", "#" %></li>
-    <li><%= link_to "お問い合わせ", "#" %></li>
-    <li><%= link_to "利用規約", "#" %></li>
+    <li>© Sharing Portfolio. 2021</li>
+    <li class="li"><%= link_to "お問い合わせ", new_contact_path %></li>
+    <li class="li"><%= link_to "利用規約", term_users_path %></li>
   </ul>
 </footer>
