--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,44 +1,47 @@
 <h1>新規登録</h1>
 <h4>アカウントをお持ちでない方がユーザーの新規登録を行います。</h4>
 <div class="sub flame">
-<%= form_with(model: @user, local: true, class:"form-horizontal") do |f| %>
-  <%= render 'shared/error_messages', model: f.object %>
-
-  <div class="form-group">
-    <%= f.label :ユーザー名, class:"col-sm-2 control-label" %>
-		<div class="col-sm-10">
-      <%= f.text_field :name, class: "form-control", placeholder:"ユーザー名を入力してください。" %>	
-		</div>
-  </div>
-  
-  <div class="form-group">
-    <%= f.label :メールアドレス, class:"col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.email_field :email, class: "form-control", placeholder:"メールアドレスを入力してください。" %>	
+  <%= form_with(model: @user, local: true, class:"form-horizontal") do |f| %>
+    <%= render 'shared/error_messages', model: f.object %>
+    
+    <div class="form-group">
+      <%= f.label :ユーザー名, class:"col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%= f.text_field :name, class: "form-control", placeholder:"ユーザー名を入力してください。" %>	
+      </div>
     </div>
-	</div>
-  
-  <div class="form-group">
-    <%= f.label :パスワード, class:"col-sm-2 control-label" %>
-		<div class="col-sm-10">
-      <%= f.text_field :password, class: "form-control", placeholder:"パスワードを入力してください。" %>	
-		</div>
-  </div>
-  
-  <div class="form-group">
-    <%= f.label :パスワード確認用, class:"col-sm-2 control-label" %>
-		<div class="col-sm-10">
-      <%= f.text_field :password_confirmation, class: "form-control", placeholder:"確認用のパスワードを入力してください。" %>	
-		</div>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :プロフィール画像, class:"col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.file_field :user_image, class: "form-control", placeholder:"プロフィール画像を選択してください。（任意）" %>
+    
+    <div class="form-group">
+      <%= f.label :メールアドレス, class:"col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%= f.email_field :email, class: "form-control", placeholder:"メールアドレスを入力してください。" %>	
+      </div>
     </div>
-  </div>
+    
+    <div class="form-group">
+      <%= f.label :パスワード, class:"col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%= f.text_field :password, class: "form-control", placeholder:"パスワードを入力してください。" %>	
+      </div>
+    </div>
+    
+    <div class="form-group">
+      <%= f.label :パスワード確認用, class:"col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%= f.text_field :password_confirmation, class: "form-control", placeholder:"確認用のパスワードを入力してください。" %>	
+      </div>
+    </div>
 
-  <%= f.submit "登録", class:"btn btn-primary btn-block" %>
-<% end %>
-<div class="already">既にアカウントをお持ちの方は<%= link_to "こちら", new_session_path %></div>
+    <div class="form-group">
+      <%= f.label :プロフィール画像, class:"col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%= f.file_field :user_image, class: "form-control", placeholder:"プロフィール画像を選択してください。（任意）" %>
+      </div>
+    </div>
+
+    <%= f.submit "登録", class:"btn btn-primary btn-block" %>
+  <% end %>
+  <div class="already">既にアカウントをお持ちの方は
+  <%= link_to "こちら", new_session_path %>
+  </div>
+</div>
