--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,7 @@
     <% if @post.image? %>
       <%= image_tag @post.image.url %>
     <% else %>
-      <%= image_tag "/assets/default_post.jpg" %>
+      <%= image_tag asset_path("default_post.jpg") %>
     <% end %>
   </div>
   <% if @post.user == current_user %>
