--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -37,7 +37,7 @@ main{
 }
 
 .alert{
- padding-top: 70px;
+ margin-top: 50px;
 }
 
 h1{
@@ -124,8 +124,6 @@ footer{
 }
 
 
-
-
 //homeページ
 .home-container{
  height: 500px;
@@ -196,8 +194,14 @@ footer{
  }
 }
 
+//新規投稿ページ
+.must{
+  color: red;
+  font-weight: 700;
+}
 
-//投稿一覧
+
+//投稿一覧ページ
 .flex{
  display: flex;
  justify-content: space-evenly;
@@ -244,6 +248,7 @@ footer{
    border-bottom: solid 3px #5472cd;
    bottom: -3px;
    width: 20%;
+   text-overflow: ellipsis;
  }
 
  .post-box{
@@ -268,13 +273,13 @@ footer{
        margin-bottom: 0px;
      }
    }
-   .post-time{
-     margin-top: 5px;
-     margin-bottom: 0px;
-     font-size: 15px;
-     color: gray;
-   }
- }
+  }
+  .post-time{
+    margin-top: 5px;
+    font-size: 15px;
+    color: gray;
+    float: right;
+  }
 }
 
  .post-content{
@@ -311,8 +316,10 @@ footer{
      margin: auto 0;
    }
  }
-
  
+ .showtag{
+   font-size: 13px;
+ }
 
 //タグ
 .tag{
@@ -344,6 +351,7 @@ footer{
 //コメント
 .comment{
  display: flex;
+ margin-top: 10px;
 }
 
 .user-image{
@@ -374,6 +382,9 @@ footer{
  .comment-edit{
    margin: 5px;
  }
+ .comment-content{
+   width: 500px;
+ }
 }
 
 .new-comment{
@@ -396,4 +407,16 @@ footer{
 
 .pagination>li>a:hover {        
  border-radius: 15px; 
+}
+
+//問い合わせページ
+.info1{
+  text-align: center;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.info2{
+  text-align: center;
+  font-size: 18px;
 }
