--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -27,9 +27,6 @@
             <%= link_to stock.post.user.name, user_path(stock.post.user) %>
           </p>
         </div>
-        <p class="post-time">
-          <%= time_ago_in_words(stock.post.created_at) %>前に投稿
-        </p>
       </div>
       <p class="post-tag">
         <% stock.post.tags.each do |list| %>
@@ -37,7 +34,10 @@
         <% end %>
       </p>
       <p class="post-content">サービス概要</p>
-        <p><%= stock.post.content %></p>
+      <p><%= stock.post.content.truncate(100) %></p>
+      <p class="post-time">
+        <%= time_ago_in_words(stock.post.created_at) %>前に投稿
+      </p>
     </div>
   </li>
   <% end %>
