--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -21,7 +21,7 @@
     <div class="form-group">
       <%= f.label :パスワード, class:"col-sm-2 control-label" %>
       <div class="col-sm-10">
-        <%= f.text_field :password, class: "form-control", placeholder:"パスワードを入力してください。" %>	
+        <%= f.text_field :password, class: "form-control", placeholder:"パスワードを入力してください。(6字以上)" %>	
       </div>
     </div>
     
