--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -194,6 +194,32 @@ footer{
  }
 }
 
+.user-show-profile{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  h2{
+    font-weight: 700;
+    font-size: 28px;
+  }
+  div{
+    text-align: center;
+    margin-top: 20px;
+    font-weight: 700;
+    font-size: 18px;
+    background: #dfefff;
+    width: 50%;
+  }
+  p{
+    text-align: center;
+    width: 50%;
+    font-size: 15px;
+    padding: 10px 20px;
+    background: #dfefff;
+    
+  }
+}
+
 //新規投稿ページ
 .must{
   color: red;
