--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,10 +1,12 @@
 <h1>タグで探す</h1>
-<h4></h4>
-<div class="sub flame">
-  <% @tag_list.each do |list| %>
-    <% unless list.tag_maps.blank? %>
-        <%= link_to  "#{list.tag_name}（#{list.posts.count}）", tag_path(list), class:"label label-primary tag" %>
-      <% end %>
-  <% end %>
+<h4>タグで絞って作品を探します。</h4>
+<% unless @tag_list.blank? %>
+  <div class="sub flame">
+    <% @tag_list.each do |list| %>
+      <% unless list.tag_maps.blank? %>
+          <%= link_to  "#{list.tag_name}（#{list.posts.count}）", tag_path(list), class:"label label-primary tag" %>
+        <% end %>
+    <% end %>
   </div>
+<% end %>
  
