--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,22 +1,24 @@
 <h1>プロフィール編集</h1>
-<h4>（自分のプロフィールを編集することができます。）</h4>
 <div class="sub flame">
   <%= form_with(model: @user, local: true) do |f| %>
     <%= render 'shared/error_messages', model: f.object %>
     <%= f.label :ユーザー名,  class:"col-sm-2 control-label" %>
-    <%= f.text_field :name, class: "form-control" %>
+    <%= f.text_field :name, class: "form-control", placeholder:"ユーザー名を入力してください。" %>
     
     <%= f.label :メールアドレス, class:"col-sm-2 control-label" %>
-    <%= f.email_field :email, class: "form-control" %>
+    <%= f.email_field :email, class: "form-control", placeholder:"メールアドレスを入力してください。" %>
     
     <%= f.label :パスワード, class:"col-sm-2 control-label" %>
-    <%= f.text_field :password, class: "form-control" %>
+    <%= f.text_field :password, class: "form-control", placeholder:"パスワードを入力してください。(6字以上)" %>
     
     <%= f.label :パスワード確認用, class:"col-sm-2 control-label" %>
-    <%= f.text_field :password_confirmation, class: "form-control" %>
+    <%= f.text_field :password_confirmation, class: "form-control", placeholder:"確認用のパスワードを入力してください。" %>
     
     <%= f.label :プロフィール画像, class:"col-sm-2 control-label" %>
     <%= f.file_field :user_image, class: "form-control" %>
+    
+    <%= f.label :自己紹介, class:"col-sm-2 control-label" %>
+    <%= f.text_area :profile, class: "form-control", placeholder:"自己紹介文を入力してください。(500字以内)" %>
 
     <%= f.submit "保存", class:"btn btn-primary btn-block" %>
   <% end %>
