--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,16 @@
-<% if @user == current_user %>
-  <h1>マイページ</h1>
-<% else %>
-  <h1><%= @user.name %></h1>
-<% end %>
+<h1>ユーザー詳細</h1>
 <div class="user-show-image show-center">
   <% if @user.user_image? %>
     <%= image_tag @user.user_image.url %>
   <% else %>
     <%= image_tag asset_path("default_user.png") %>
+  <% end %>
+</div>
+<div class="user-show-profile">
+  <h2><%= @user.name %></h2>
+  <% unless @user.profile.blank? %>
+    <div>〜プロフィール〜</div>
+    <p><%= @user.profile %></p>
   <% end %>
 </div>
 <h2>投稿一覧</h2>
