--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,24 +2,46 @@
 <div class="sub flame">
   <%= form_with(model: @user, local: true) do |f| %>
     <%= render 'shared/error_messages', model: f.object %>
-    <%= f.label :ユーザー名,  class:"col-sm-2 control-label" %>
-    <%= f.text_field :name, class: "form-control", placeholder:"ユーザー名を入力してください。" %>
-    
-    <%= f.label :メールアドレス, class:"col-sm-2 control-label" %>
-    <%= f.email_field :email, class: "form-control", placeholder:"メールアドレスを入力してください。" %>
-    
-    <%= f.label :パスワード, class:"col-sm-2 control-label" %>
-    <%= f.text_field :password, class: "form-control", placeholder:"パスワードを入力してください。(6字以上)" %>
-    
-    <%= f.label :パスワード確認用, class:"col-sm-2 control-label" %>
-    <%= f.text_field :password_confirmation, class: "form-control", placeholder:"確認用のパスワードを入力してください。" %>
-    
-    <%= f.label :プロフィール画像, class:"col-sm-2 control-label" %>
-    <%= f.file_field :user_image, class: "form-control" %>
-    
-    <%= f.label :自己紹介, class:"col-sm-2 control-label" %>
-    <%= f.text_area :profile, class: "form-control", placeholder:"自己紹介文を入力してください。(500字以内)" %>
 
+    <div class="form-group">
+      <%= f.label :ユーザー名 %><span class="must"> (必須)</span>
+      <%= f.text_field :name, class: "form-control", placeholder:"ユーザー名を入力してください。" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :メールアドレス %><span class="must"> (必須)</span>
+      <%= f.email_field :email, class: "form-control", placeholder:"メールアドレスを入力してください。" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :パスワード %><span class="must"> (必須)</span>
+      <%= f.text_field :password, class: "form-control", placeholder:"パスワードを入力してください。(6字以上)" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :パスワード確認用 %><span class="must"> (必須)</span>
+      <%= f.text_field :password_confirmation, class: "form-control", placeholder:"確認用のパスワードを入力してください。" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :Twitterリンク %>
+      <%= f.text_field :twitter_link, class: "form-control", placeholder:"TwitterアカウントのURLを入力してください。" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :GitHubリンク %>
+      <%= f.text_field :github_link, class: "form-control", placeholder:"GitHubアカウントのURLを入力してください。" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :プロフィール画像 %>
+      <%= f.file_field :user_image, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :自己紹介 %>
+      <%= f.text_area :profile, class: "form-control", placeholder:"自己紹介文を入力してください。(500字以内)" %>
+    </div>
     <%= f.submit "保存", class:"btn btn-primary btn-block" %>
   <% end %>
   
