--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,8 +8,14 @@
 </div>
 <div class="user-show-profile">
   <h2><%= @user.name %></h2>
+  <% unless @user.twitter_link.blank? %>
+    <%= link_to "Twitter", @user.twitter_link, class:"twitter-link", target:"_blank" %>
+  <% end %>
+  <% unless @user.github_link.blank? %>
+    <%= link_to "GitHub", @user.github_link, class:"github-link", target:"_blank" %>
+  <% end %>
   <% unless @user.profile.blank? %>
-    <div>〜プロフィール〜</div>
+    <h3>〜プロフィール〜</h3>
     <p><%= @user.profile %></p>
   <% end %>
 </div>
