--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,6 +1,7 @@
 <div class="home-container">
   <div class="home-title1">〜 Sharing Portfolio 〜</div>
-  <div class="home-title2">作成したポートフォリオをみんなに公開しよう</div>
+  <div class="home-title2"><span>"エンジニア"</span>による<span>"エンジニア"</span>のポートフォリオ公開サービス!!</div>
+  <div class="home-title3">作成したポートフォリオをみんなに公開しよう!!</div>
   <% unless !current_user.nil? %>
     <div class="home-button"><%= link_to "今すぐ始める", new_user_path, class:"btn btn-primary" %></div>
   <% end %>
