--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -132,11 +132,20 @@ footer{
    flex-direction: column;
    align-items: center;
  .home-title1{
-   font-size: 50px;
+   font-size: 55px;
    font-weight: 700;
  }
  .home-title2{
-   font-size: 50px;
+   margin-top: 30px;
+   font-size: 35px;
+   font-weight: 700;
+   span{
+     color: red;
+     font-size: 40px;
+   }
+ }
+ .home-title3{
+   font-size: 35px;
    font-weight: 700;
  }
  .btn{
