--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -3,7 +3,7 @@
 <div class="sub flame">
   <%= form_with(model:@comment, local: true) do |f| %>
     <%= f.label :コメント欄, class:"ol-sm-2 control-label" %>
-    <%= f.text_field :content, class: "form-control" %>
+    <%= f.text_area :content, class: "form-control" %>
     <%= f.submit "コメントを編集する", class:"btn btn-primary btn-block" %>
 <% end %>
 
