--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,7 @@
   <% end %>
   <% unless @user.profile.blank? %>
     <h3>〜プロフィール〜</h3>
-    <p><%= @user.profile %></p>
+    <p><%= simple_format(@user.profile) %></p>
   <% end %>
 </div>
 <h2>投稿一覧</h2>
