--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,5 +1,5 @@
-<h1>ストック一覧</h1>
-<h4>あなたがストックしたポートフォリオの一覧です。</h4>
+<h1>いいねした作品一覧</h1>
+<h4>あなたがいいねしたポートフォリオの一覧です。</h4>
 <ul class="flex flame">
   <% @stocks.each do |stock| %>
   <li class="post-list flame">
