--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -357,11 +357,11 @@ footer{
  .show-title{
    margin: 20px auto 10px;
    font-weight: 700;
-   padding: 0.4em 0.5em;/*文字の上下 左右の余白*/
-   color: #494949;/*文字色*/
-   background: #f4f4f4;/*背景色*/
-   border-left: solid 5px #7db4e6;/*左線*/
-   border-bottom: solid 3px #d7d7d7;/*下線*/
+   padding: 0.4em 0.5em;
+   color: #494949;
+   background: #f4f4f4;
+   border-left: solid 5px #7db4e6;
+   border-bottom: solid 3px #d7d7d7;
  }
 
  .show-content{
@@ -388,18 +388,49 @@ footer{
 
 
 //ストック
-.stock-btn{
- border-radius:30px;
- height: 30px;
- width: 80px;
- font-size: 10px;
+.stock-block{
+  display: flex;
+}
+
+.stock-btn1{
+  color: #fff;
+  height: 30px;
+  width: 80px;
+  font-size: 13px;
+  background-color: rgb(93, 165, 93);
+  border: none;
+}
+
+.stock-btn2{
+  color: #fff;
+  height: 30px;
+  width: 80px;
+  font-size: 13px;
+  background-color: rgb(201, 64, 64);
+  border: none;
 }
 
 .stock-count{
- padding-top: 5px;
- padding-left: 5px;
- font-size: 12px;
+  color: #fff;
+  position: relative;
+  display: inline-block;
+  margin-left: 20px;
+  padding: 7px 10px;
+  font-size: 13px;
+  background: #798fd1;
+  border-radius: 50%;
 }
+
+.stock-count:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: -22px;
+  margin-top: -15px;
+  border: 15px solid transparent;
+  border-right: 15px solid #798fd1;
+}
+
 
 
 
