--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
             <li class="header"><%= link_to "タグで探す", tags_path %></li>
             <li class="header"><%= link_to "投稿する", new_post_path %></li>
             <li class="header"><%= link_to "作品一覧", posts_path %></li>
-            <li class="header"><%= link_to "ストック一覧", stocks_path %></li>
+            <li class="header"><%= link_to "いいねした作品", stocks_path %></li>
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false"><%= current_user.name %> <span class="caret"></span>
               </a>
