--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,8 +5,10 @@
       <ul class="nav navbar-nav navbar-right">
           <% if !current_user.nil? %>
             <% if current_user.admin? %>
-              <li class="header"><%= link_to "ユーザー管理", users_path %></li>
-            <% end %>
+              <li class="header"><%= link_to "ユーザー管理", admin_users_path %></li>
+              <li class="header"><%= link_to "作品管理", admin_posts_path %></li>
+              <li><%= link_to "ログアウト", session_path(current_user), method: :delete %></li>
+            <% else %>
               <li class="header"><%= link_to "タグで探す", tags_path %></li>
               <li class="header"><%= link_to "投稿する", new_post_path %></li>
               <li class="header"><%= link_to "作品一覧", posts_path %></li>
@@ -20,6 +22,7 @@
                   <li><%= link_to "ログアウト", session_path(current_user), method: :delete %></li>
                 </ul>
               </li>
+            <% end %>
           <% else %>
             <li><%= link_to "ログイン", new_session_path %></li>
             <li><%= link_to "新規登録", new_user_path %></li>
