--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -9,5 +9,9 @@
 <h2>最新作品一覧</h2>
 <hr>
 <div>
+<% if current_user.nil? %>
+  <%= render "shared/home_posts_no" %>
+<% else %>
   <%= render "shared/home_posts" %>
+<% end %>
 </div>
