--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,6 +24,7 @@
               </li>
             <% end %>
           <% else %>
+            <li><%= link_to "ゲストログイン", new_session_path %></li>
             <li><%= link_to "ログイン", new_session_path %></li>
             <li><%= link_to "新規登録", new_user_path %></li>
           <% end %>
